--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,12 @@
     "angular-route": "1.4",
     "angular-sanitize": "1.4",
     "angular-touch": "1.4",
-    "angularfire": "~1.1.1"
+    "angularfire": "~1.1.1",
+    "angular-bootstrap": "~0.13.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.4"
+    "angular-mocks": "1.4",
+    "angular-bootstrap": "~0.13.0"
   },
   "appPath": "app",
   "moduleName": "laoshiListApp",
