--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "angular-bootstrap": "^0.12.0",
     "angularfire": "^1.1.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
