--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "1.4",
     "angular-touch": "1.4",
     "angularfire": "~1.1.1",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "spin-js": "~2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4",
