--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "laoshilist",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-file-upload": "^1.6.4",
+    "spin.js": "^2.1.0"
+  },
   "repository": {},
   "devDependencies": {
     "angular-bootstrap": "^0.12.0",
@@ -34,6 +37,8 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0",
+    "spin": "0.0.1",
+    "spin.js": "^2.1.0",
     "time-grunt": "^1.0.0"
   },
   "engines": {
