--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-touch": "1.4",
     "angularfire": "~1.1.1",
     "angular-bootstrap": "~0.13.0",
-    "spin-js": "~2.0.1"
+    "angular-ui-map-baidu": "~1.1.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4",
