--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular-file-upload": "^1.6.4",
+    "baidu-map": "^0.1.3",
     "spin.js": "^2.1.0"
   },
   "repository": {},
