--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "laoshilist",
   "version": "0.0.0",
   "dependencies": {
+    "angular-elastic": "^2.3.5",
     "angular-file-upload": "^1.6.4",
-    "baidu-map": "^0.1.3",
     "spin.js": "^2.1.0"
   },
   "repository": {},
