--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "1.4",
     "angularfire": "~1.1.1",
     "angular-bootstrap": "~0.13.0",
-    "angular-elastic": "~2.4.2"
+    "angular-elastic": "~2.4.2",
+    "ng-file-upload": "~5.0.7",
+    "ng-file-upload-shim": "~5.0.7"
   },
   "devDependencies": {
     "angular-mocks": "1.4",
