--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-bootstrap": "~0.13.0",
     "angular-elastic": "~2.4.2",
     "ng-file-upload": "~5.0.7",
-    "ng-file-upload-shim": "~5.0.7"
+    "ng-file-upload-shim": "~5.0.7",
+    "moment": "~2.10.3",
+    "angular-moment": "~0.10.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4",
