--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "ng-file-upload": "~5.0.7",
     "ng-file-upload-shim": "~5.0.7",
     "moment": "~2.10.3",
-    "angular-moment": "~0.10.1"
+    "angular-moment": "~0.10.1",
+    "ng-table": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4",
