--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.4",
-    "bootstrap-sass-official": "^3.2.0",
+    "bootstrap-sass-official": "3.0.0",
     "angular-animate": "1.4",
     "angular-cookies": "1.4",
     "angular-resource": "1.4",
@@ -17,11 +17,11 @@
     "ng-file-upload-shim": "~5.0.7",
     "moment": "~2.10.3",
     "angular-moment": "~0.10.1",
-    "ng-table": "~0.7.0"
+    "ng-table": "~0.7.0",
+    "angular-bootstrap": "~0.13.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.4",
-    "angular-bootstrap": "~0.13.0"
+    "angular-mocks": "1.4"
   },
   "appPath": "app",
   "moduleName": "laoshiListApp",
