begining of change to new data source: jobs

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,9 +22,9 @@
   }
 }
 
-"jshint_options":
-    {
-        "predef": {
-            "Firebase": false
-        }
-     }
+# "jshint_options":
+#    {
+#        "predef": {
+#            "Firebase": false
+#        }
+#     }
